--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ kotlinx-benchmark-runtime = { module = "org.jetbrains.kotlinx:kotlinx-benchmark-
 batik-anim = { module = "org.apache.xmlgraphics:batik-anim", version.ref = "batik" }
 batik-svg-dom = { module = "org.apache.xmlgraphics:batik-svg-dom", version.ref = "batik" }
 batik-css = { module = "org.apache.xmlgraphics:batik-css", version.ref = "batik" }
+fop = { module = "org.apache.xmlgraphics:fop", version = "2.10" }
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
