--- a/.gitignore
+++ b/.gitignore
@@ -178,4 +178,5 @@ gradle-app.setting
 # End of https://www.toptal.com/developers/gitignore/api/kotlin,gradle,intellij+all,macos
 
 .kotlin/
-output/
+output/*
+!output/.gitkeep
