--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 kotlinx-benchmark = "0.4.13"
 kotlin = "2.2.0-Beta1"
 batik = "1.18"
+kotlinx-serialization = "1.6.0"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -11,6 +12,7 @@ batik-svg-dom = { module = "org.apache.xmlgraphics:batik-svg-dom", version.ref =
 batik-css = { module = "org.apache.xmlgraphics:batik-css", version.ref = "batik" }
 fop = { module = "org.apache.xmlgraphics:fop", version = "2.10" }
 clikt = { module = "com.github.ajalt.clikt:clikt", version = "5.0.3" }
+kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
@@ -18,3 +20,4 @@ kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref 
 kotlin-allopen = { id = "org.jetbrains.kotlin.plugin.allopen", version = "2.1.20" }
 kotlinx-benchmark = { id = "org.jetbrains.kotlinx.benchmark", version.ref = "kotlinx-benchmark" }
 shadow = { id = "com.gradleup.shadow", version = "9.0.0-beta12" }
+kotlinx-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlinx-serialization" }
