Remove the extraneous job

--- a/.github/workflows/run-gradle-task.yml
+++ b/.github/workflows/run-gradle-task.yml
@@ -14,7 +14,7 @@ on:
         default: '.'
 
 jobs:
-  test:
+  task:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the repository
